# networked

./: .gitignore  CMakeLists.txt
src/task1/: CMakeLists.txt
src/task1/client/: client.cpp
src/task1/server/: server.cpp
src/task1/utils/: CMakeLists.txt  socket_tools.cpp  socket_tools.h
src/task2/: CMakeLists.txt  client.cpp  lobby.cpp  server.cpp  utils.h
src/task3/: CMakeLists.txt  app.cpp  app.h  entity.h  lobby.cpp  main.cpp  protocol.cpp  protocol.h  server.cpp  utils.cpp  utils.h
src/task4/: CMakeLists.txt  app.cpp  entity.cpp  entity.h  main.cpp  mathUtils.h  protocol.cpp  protocol.h  server.cpp
